--- a/boilerplate/docker-compose.yml
+++ b/boilerplate/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   mysql:
     image: "mysql:5"
     volumes:
-     - ../initdb:/docker-entrypoint-initdb.d
+     - ./initdb:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: {{name}}
       MYSQL_ROOT_PASSWORD: example
