--- a/boilerplate/docker-compose.yml
+++ b/boilerplate/docker-compose.yml
@@ -13,3 +13,13 @@ services:
       MYSQL_ROOT_PASSWORD: example
     ports:
      - "127.0.0.1:3306:3306"
+  rabbitmq:
+    image: "rabbitmq:3-alpine"
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+    ports:
+    - "127.0.0.1:15672:15672"
+    - "127.0.0.1:4369:4369"
+    - "127.0.0.1:5672:5672"
+    - "127.0.0.1:25672:25672"  
